stylesheets/stylesheet.css
body{
  background-color: #000000;
}

#description{
  color: white;
  float: left;
}

#options{
  width:14%;
  height: 5%;
  top: 1%;
  left: 85%;
  padding:0px;
  margin: 0px;
  z-index:100;
  centerX: true;
  centerY: true;
  display: block;
  float:right;
}

#searchButton{
  float: right;
}

.grid-item{
  width: 286px;
  float: left;
}

#social ul {
  float: right;
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#social ul li {
  display: inline;
}

#social ul li a {
  text-decoration: none;
  padding: 0px;
}

#social ul li a #facebook {
  color: #3b5998;
}
#social ul li a #twitter {
  color: #4099FF;
}
#social ul li a #flickr {
  color: #ffffff;
}
#social ul li a #instagram {
  color:#125688;
}




.static-banner {
  position: absolute;
  left: 10px;
  top: 10px;
  padding: 10px 30px;
  color: white;
  background: #A2C;
  font-size: 22px;
  z-index: 2; /* above items */
}

